--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,8 @@
-### Canonicalize codeigniter URLs
-
+### Canonicaliz
 # Enforce SSL https://www. 
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule (.*) https://%{SERVER_NAME}/$1 [R,L]
+RewriteCond %{HTTPS} !=on
+RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
 
 ###
 # Removes access to the system folder by users.
